--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h2>Hello World</h2>
+<h2>Resume of Min Woo Joo</h2>
+
+<p>Seoul, South Korea<p>
+010-2843-8977
+benefit.joo@gmail.com
+benefitjoo.github.io
+
+<h3>Technical Skill</h3>
