--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="/styles.css"/>
 <body id="top">
 <div id="cv" class="instaFade">
 	<div class="mainDetails">
