--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <div id="cv" class="instaFade">
 	<div class="mainDetails">
 		<div id="headshot" class="quickFade">
-			<img src="headshot.jpg" alt="Alan Smith" />
+			<img src="me.jpg" alt="Min-Woo Joo" />
 		</div>
 
 		<div id="name">
