--- a/index.html
+++ b/index.html
@@ -59,6 +59,75 @@
 					<p class="subDetails">October 2004 - December 2006</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
 				</article>
+<body id="top">
+<div id="cv" class="instaFade">
+	<div class="mainDetails">
+		<div id="headshot" class="quickFade">
+			<img src="me1.png" alt="Min-Woo Joo" />
+		</div>
+
+		<div id="name">
+			<h1 class="quickFade delayTwo">Min-Woo Joo</h1>
+			<h2 class="quickFade delayThree">Full Stack developer</h2>
+		</div>
+
+		<div id="contactDetails" class="quickFade delayFour">
+			<ul>
+				<li>e: <a href="mailto:joe@bloggs.com" target="_blank">benefit.joo@gmail.com</a></li>
+				<li>w: <a href="http://benefitjoo.github.io">benefitjoo.github.io</a></li>
+				<li>m: 010-2843-8977</li>
+			</ul>
+		</div>
+		<div class="clear"></div>
+	</div>
+
+	<div id="mainArea" class="quickFade delayFive">
+		<section>
+			<article>
+				<div class="sectionTitle">
+					<h1>Technical Skills</h1>
+				</div>
+				<div class="sectionContent">
+					<h3>Strong</h3>
+					<p> JavaScript/ES6, React/Redux, Node.js/Express, HTML, CSS, Git</p>
+					<h3>Experienced</h3>
+					<p> Bootstrap, jQuery, AngularJS, Backbone, D3, MySQL, MongoDB, Gulp, Grunt, Webpack, TDD(Mocha/Chai/Sinon)</p>
+				</div>
+			</article>
+			<div class="clear"></div>
+		</section>
+
+
+		<section>
+			<div class="sectionTitle">
+				<h1>Software Engineerings Projects</h1>
+			</div>
+
+			<div class="sectionContent">
+				<article>
+					<h3 class="projectName">MoneyClip</h3> <h4 class="projectRole">Full Stack Developer, Project Lead</h4>
+					<p class="subDetails">Collaborating with startup-Tenqube to make web application serving customized financial product</p>
+					<ul class="description">
+						<li>Configure development environment for ES5 transfile and build command automation using Webpack, Babel and Gulp </li>
+						<li>Established CRUD functionality by setting RESTful APIs in Node with Express </li>
+						<li>Fetched data from Government financial data using open API with fetch JavaScript native Ajax method on server-side and client-side </li>
+						<li>Applied flux design pattern using Redux enabling synchronous data flow among client components </li>
+						<li>Refactored client-side whole files to make clean code, reduce file size, minimize dependency as possible </li>
+						<li>Designed the the final UI/UX design in Material Design using Sketch and CSS3 </li>
+					</ul>
+				</article>
+
+				<article>
+					<h3 class="projectName">Around You</h3> <h4 class="projectRole">Full Stack Developer, Scrum Master</h4>
+					<p class="subDetails">Web application helping user to search easily best photogenic place in around streets</p>
+					<ul>
+						<li>Established image file uploading and converting buffer to jpeg functionality using native JavaScript and Express.js method </li>
+						<li>Designed and developed MongoDB schema using Mongoose to user data and image data </li>
+						<li>Rendered google map and marked pin of user coordinate data on the map with open source Gmaps </li>
+						<li>Architected client-side rendering for different routes using React-router </li>
+					</ul>
+				</article>
+
 			</div>
 			<div class="clear"></div>
 		</section>
@@ -66,20 +135,28 @@
 
 		<section>
 			<div class="sectionTitle">
-				<h1>Key Skills</h1>
+				<h1>Experiences</h1>
 			</div>
 
 			<div class="sectionContent">
-				<ul class="keySkills">
-					<li>A Key Skill</li>
-					<li>B Key Skill</li>
-					<li>C Key Skill</li>
-					<li>D Key Skill</li>
-					<li>E Key Skill</li>
-					<li>F Key Skill</li>
-					<li>G Key Skill</li>
-					<li>H Key Skill</li>
-				</ul>
+				<article>
+					<h3 class="projectName">Popup-retail</h3> <h4 class="projectRole">2015.04 ~ 2016.06</h4>
+					<ul>
+						<h5>As a Co-founder, built B2B startup in short term real estate platform specialized fashion business and was responsible for decision on Marketing and Sales Strategy </h5>
+					</ul>
+				</article>
+				<article>
+					<h3 class="projectName">Korea Learning Center</h3> <h4 class="projectRole">2014.02 ~ 2015.02</h4>
+					<ul>
+						<h5>As a Junior Consultant, consulted HR development to LG Display, SK Hynix and Hyundai Motors, etc </h5>
+					</ul>
+				</article>
+				<article>
+					<h3 class="projectName">Benefit Magazine</h3> <h4 class="projectRole">2010.07 ~ 2011.02</h4>
+					<ul>
+						<h5>As a Co-founder, built magazine startup about business in social entrepreneurship, CSR and was responsible for editing</h5>
+					</ul>
+				</article>
 			</div>
 			<div class="clear"></div>
 		</section>
@@ -92,15 +169,16 @@
 
 			<div class="sectionContent">
 				<article>
-					<h2>College/University</h2>
-					<p class="subDetails">Qualification</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim.</p>
+					<h3 class="projectName">Code States</h3> <h4 class="projectRole">2016</h4>
+					<ul>
+						<h5>Advanced Software Engineering Immersive</h5>
+					</ul>
 				</article>
-
 				<article>
-					<h2>College/University</h2>
-					<p class="subDetails">Qualification</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim.</p>
+					<h3 class="projectName">Kangnam University</h3> <h4 class="projectRole">2014</h4>
+					<ul>
+						<h5>Business Administration (GPA: 3.58) </h5>
+					</ul>
 				</article>
 			</div>
 			<div class="clear"></div>
