--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
 				<li>e: <a href="mailto:joe@bloggs.com" target="_blank">benefit.joo@gmail.com</a></li>
-				<li>w: <a href="http://benefitjoo.github.io">github.com/benefitjoo</a></li>
+				<li>r: <a href="http://github.com/benefitjoo">github.com/benefitjoo</a></li>
 				<li>m: 010-2843-8977</li>
 			</ul>
 		</div>
