--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		<div id="name">
 			<h1 class="quickFade delayTwo">Min-Woo Joo</h1>
-			<h2 class="quickFade delayThree">Full Stack developer</h2>
+			<h2 class="quickFade delayThree">Frontend developer</h2>
 		</div>
 
 		<div id="contactDetails" class="quickFade delayFour">
